--- a/Windows XP Luna/gtk-3.20/gtk-headerbar.css
+++ b/Windows XP Luna/gtk-3.20/gtk-headerbar.css
@@ -1,39 +1,69 @@
 headerbar {
-  padding: 4px 8px;
-  min-height: 30px;
-  color: #000000;
-  background-color: #ECE9D8;
-  background-size: 1px 100%;
-  background-image: url("assets/titlebar-focused-middle.png"); }
-  headerbar:backdrop {
     color: #000000;
     background-color: #ECE9D8;
-    background-image: url("assets/titlebar-unfocused-middle.png"); }
-  separator:first-child + headerbar, separator:first-child + headerbar:backdrop, headerbar:first-child, headerbar:first-child:backdrop {
-    border-top-left-radius: 6px; }
-    .maximized separator:first-child + headerbar, .tiled separator:first-child + headerbar, .maximized separator:first-child + headerbar:backdrop, .tiled separator:first-child + headerbar:backdrop, .maximized headerbar:first-child, .tiled headerbar:first-child, .maximized headerbar:first-child:backdrop, .tiled headerbar:first-child:backdrop {
-      border-radius: 0; }
-  headerbar:last-child, headerbar:last-child:backdrop {
-    border-top-right-radius: 6px; }
-    .maximized headerbar:last-child, .tiled headerbar:last-child, .maximized headerbar:last-child:backdrop, .tiled headerbar:last-child:backdrop {
-      border-radius: 0; }
-  headerbar .title {
-    padding-left: 12px;
-    padding-right: 12px;
+    background-size: 1px 100%;
+    background-image: url("assets/titlebar-focused-middle.png");
+    min-height: 30px;
+}
+
+headerbar:backdrop {
+    color: #000000;
+    background-color: #ECE9D8;
+    background-image: url("assets/titlebar-unfocused-middle.png");
+}
+
+separator:first-child+headerbar,
+separator:first-child+headerbar:backdrop,
+headerbar:first-child,
+headerbar:first-child:backdrop {
+    border-top-left-radius: 6px;
+}
+
+.maximized separator:first-child+headerbar,
+.tiled separator:first-child+headerbar,
+.maximized separator:first-child+headerbar:backdrop,
+.tiled separator:first-child+headerbar:backdrop,
+.maximized headerbar:first-child,
+.tiled headerbar:first-child,
+.maximized headerbar:first-child:backdrop,
+.tiled headerbar:first-child:backdrop {
+    border-radius: 0;
+}
+
+headerbar:last-child,
+headerbar:last-child:backdrop {
+    border-top-right-radius: 6px;
+}
+
+.maximized headerbar:last-child,
+.tiled headerbar:last-child,
+.maximized headerbar:last-child:backdrop,
+.tiled headerbar:last-child:backdrop {
+    border-radius: 0;
+}
+
+headerbar .title {
+    padding-left: 5px;
+    padding-right: 5px;
     font-weight: bold;
     color: #FFFFFF;
-    padding: 0 12px;
-    text-shadow: 1px 1px black; }
-    headerbar .title:backdrop {
-      text-shadow: none;
-      color: rgba(255, 255, 255, 0.3); }
-  headerbar .subtitle {
+    padding: 0px;
+    text-shadow: 1px 1px black;
+}
+
+headerbar .title:backdrop {
+    text-shadow: none;
+    color: rgba(255, 255, 255, 0.3);
+}
+
+headerbar .subtitle {
     font-size: smaller;
     padding-left: 12px;
     padding-right: 12px;
-    color: rgba(255, 255, 255, 0.7); }
-  headerbar button {
-    padding: 6px 6px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+headerbar button {
     border-style: solid;
     border-width: 1px;
     border-radius: 2px;
@@ -41,80 +71,252 @@ headerbar {
     border-color: #374a5c;
     background-color: #ECE9D8;
     background-image: linear-gradient(to left, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to top, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to bottom, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea);
-    -gtk-outline-radius: 2px; }
-    headerbar button:hover, headerbar button:focus {
-      box-shadow: inset 0 0 1px 2px #ffc73c;
-      border-color: #354c63; }
-    headerbar button:active, headerbar button:checked {
-      border-color: shade(#dbd7bb, 0.3);
-      background-color: #e4e0c9;
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to bottom, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to top, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea); }
-      headerbar button:active:disabled, headerbar button:checked:disabled {
-        color: #121210;
-        border-color: #706f67;
-        background-color: #cecab4; }
-    headerbar button:disabled {
-      color: #76756c;
-      border-color: #b0a981;
-      background-color: #e0ddcd; }
-  headerbar entry {
-    padding: 6px 8px; }
-  headerbar.titlebar, .titlebar headerbar {
-    border-radius: 6px 6px 0px 0px; }
-  headerbar .titlebutton.close, headerbar .titlebutton.maximize, headerbar .titlebutton.minimize, headerbar .titlebutton:not(separator) {
-    padding: 2px 2px;
+    -gtk-outline-radius: 2px;
+}
+
+headerbar button:hover,
+headerbar button:focus {
+    box-shadow: inset 0 0 1px 2px #ffc73c;
+    border-color: #354c63;
+}
+
+headerbar button:active,
+headerbar button:checked {
+    border-color: shade(#dbd7bb, 0.3);
+    background-color: #e4e0c9;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to bottom, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to top, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea);
+}
+
+headerbar button:active:disabled,
+headerbar button:checked:disabled {
+    color: #121210;
+    border-color: #706f67;
+    background-color: #cecab4;
+}
+
+headerbar button:disabled {
+    color: #76756c;
+    border-color: #b0a981;
+    background-color: #e0ddcd;
+}
+
+headerbar entry {
+    padding: 0px 0px;
+}
+
+headerbar.titlebar,
+.titlebar headerbar {
+    border-radius: 6px 6px 0px 0px;
+}
+
+
+headerbar .titlebutton.close {
+    background: url("assets/close-normal.png") 100% 100%;
+}
+
+headerbar .titlebutton.close:hover {
+    background: url("assets/close-hover.png") 100% 100%;
+}
+
+headerbar .titlebutton.close:active {
+    background: url("assets/close-active.png") 100% 100%;
+}
+
+headerbar .titlebutton.close:backdrop {
+    background: url("assets/close-backdrop.png") 100% 100%;
+}
+
+headerbar .titlebutton.close:backdrop:hover {
+    background: url("assets/close-backdrop-hover.png") 100% 100%;
+}
+
+headerbar .titlebutton.close:backdrop:active {
+    background: url("assets/close-active.png") 100% 100%;
+}
+
+headerbar .titlebutton.minimize {
+    background: url("assets/minimize-normal.png") 100% 100%;
+}
+
+headerbar .titlebutton.minimize:hover {
+    background: url("assets/minimize-hover.png") 100% 100%;
+}
+
+headerbar .titlebutton.minimize:active {
+    background: url("assets/minimize-active.png") 100% 100%;
+}
+
+headerbar .titlebutton.minimize:backdrop {
+    background: url("assets/minimize-backdrop.png") 100% 100%;
+}
+
+headerbar .titlebutton.minimize:backdrop:hover {
+    background: url("assets/minimize-backdrop-hover.png") 100% 100%;
+}
+
+headerbar .titlebutton.minimize:backdrop:active {
+    background: url("assets/minimize-active.png") 100% 100%;
+}
+
+headerbar .titlebutton.maximize {
+    background: url("assets/maximize-normal.png") 100% 100%;
+}
+
+headerbar .titlebutton.maximize:hover {
+    background: url("assets/maximize-hover.png") 100% 100%;
+}
+
+headerbar .titlebutton.maximize:active {
+    background: url("assets/maximize-active.png") 100% 100%;
+}
+
+headerbar .titlebutton.maximize:backdrop {
+    background: url("assets/maximize-backdrop.png") 100% 100%;
+}
+
+headerbar .titlebutton.maximize:backdrop:hover {
+    background: url("assets/maximize-backdrop-hover.png") 100% 100%;
+}
+
+headerbar .titlebutton.maximize:backdrop:active {
+    background: url("assets/maximize-active.png") 100% 100%;
+}
+
+.maximized headerbar .titlebutton.maximize {
+    background: url("assets/restore-normal.png") 100% 100%;
+}
+
+.maximized headerbar .titlebutton.maximize:hover {
+    background: url("assets/restore-hover.png") 100% 100%;
+}
+
+.maximized headerbar .titlebutton.maximize:active {
+    background: url("assets/restore-active.png") 100% 100%;
+}
+
+.maximized headerbar .titlebutton.maximize:backdrop {
+    background: url("assets/restore-backdrop.png") 100% 100%;
+}
+
+.maximized headerbar .titlebutton.maximize:backdrop:hover {
+    background: url("assets/restore-backdrop-hover.png") 100% 100%;
+}
+
+.maximized headerbar .titlebutton.maximize:backdrop:active {
+    background: url("assets/restore-active.png") 100% 100%;
+}
+
+.titlebutton.close,
+.titlebutton.close:hover,
+.titlebutton.close:active,
+.titlebutton.maximize,
+.titlebutton.maximize:hover,
+.titlebutton.maximize:active,
+.titlebutton.minimize,
+.titlebutton.minimize:hover,
+.titlebutton.minimize:active,
+.titlebutton.close:backdrop,
+.titlebutton.close:hover:backdrop,
+.titlebutton.close:active:backdrop,
+.titlebutton.maximize:backdrop,
+.titlebutton.maximize:hover:backdrop,
+.titlebutton.maximize:active:backdrop,
+.titlebutton.minimize:backdrop,
+.titlebutton.minimize:hover:backdrop,
+.titlebutton.minimize:active:backdrop,
+.titlebutton:not(separator) {
+    padding: 3px 3px 2px 2px;
     border: none;
     box-shadow: none;
     color: transparent;
+    margin: 3px 0px 0px -4px;
     background-color: transparent;
     -gtk-icon-shadow: none;
     background-position: center;
-    background-repeat: no-repeat; }
-  headerbar .titlebutton.close {
-    background: url("assets/close-normal.png") 100% 100%; }
-    headerbar .titlebutton.close:hover {
-      background: url("assets/close-hover.png") 100% 100%; }
-    headerbar .titlebutton.close:active {
-      background: url("assets/close-active.png") 100% 100%; }
-    headerbar .titlebutton.close:backdrop {
-      background: url("assets/close-backdrop.png") 100% 100%; }
-      headerbar .titlebutton.close:backdrop:hover {
-        background: url("assets/close-backdrop-hover.png") 100% 100%; }
-      headerbar .titlebutton.close:backdrop:active {
-        background: url("assets/close-active.png") 100% 100%; }
-  headerbar .titlebutton.minimize {
-    background: url("assets/minimize-normal.png") 100% 100%; }
-    headerbar .titlebutton.minimize:hover {
-      background: url("assets/minimize-hover.png") 100% 100%; }
-    headerbar .titlebutton.minimize:active {
-      background: url("assets/minimize-active.png") 100% 100%; }
-    headerbar .titlebutton.minimize:backdrop {
-      background: url("assets/minimize-backdrop.png") 100% 100%; }
-      headerbar .titlebutton.minimize:backdrop:hover {
-        background: url("assets/minimize-backdrop-hover.png") 100% 100%; }
-      headerbar .titlebutton.minimize:backdrop:active {
-        background: url("assets/minimize-active.png") 100% 100%; }
-  headerbar .titlebutton.maximize {
-    background: url("assets/maximize-normal.png") 100% 100%; }
-    headerbar .titlebutton.maximize:hover {
-      background: url("assets/maximize-hover.png") 100% 100%; }
-    headerbar .titlebutton.maximize:active {
-      background: url("assets/maximize-active.png") 100% 100%; }
-    headerbar .titlebutton.maximize:backdrop {
-      background: url("assets/maximize-backdrop.png") 100% 100%; }
-      headerbar .titlebutton.maximize:backdrop:hover {
-        background: url("assets/maximize-backdrop-hover.png") 100% 100%; }
-      headerbar .titlebutton.maximize:backdrop:active {
-        background: url("assets/maximize-active.png") 100% 100%; }
-  .maximized headerbar .titlebutton.maximize {
-    background: url("assets/restore-normal.png") 100% 100%; }
-    .maximized headerbar .titlebutton.maximize:hover {
-      background: url("assets/restore-hover.png") 100% 100%; }
-    .maximized headerbar .titlebutton.maximize:active {
-      background: url("assets/restore-active.png") 100% 100%; }
-    .maximized headerbar .titlebutton.maximize:backdrop {
-      background: url("assets/restore-backdrop.png") 100% 100%; }
-      .maximized headerbar .titlebutton.maximize:backdrop:hover {
-        background: url("assets/restore-backdrop-hover.png") 100% 100%; }
-      .maximized headerbar .titlebutton.maximize:backdrop:active {
-        background: url("assets/restore-active.png") 100% 100%; }
+    background-size: 21px 21px;
+    background-repeat: no-repeat;
+}
+
+headerbar button.image-button,
+headerbar button.title-button {
+    background: url("/home/shade/git/Windows-XP-theme/Windows XP Luna/gtk-3.0/assets/image-button-normal.png") 100% 100%;
+}
+
+headerbar button.image-button:hover,
+headerbar button.title-button:hover {
+    background: url("/home/shade/git/Windows-XP-theme/Windows XP Luna/gtk-3.0/assets/image-button-hover.png") 100% 100%;
+}
+
+headerbar button.image-button:active,
+headerbar button.title-button:active {
+    background: url("/home/shade/git/Windows-XP-theme/Windows XP Luna/gtk-3.0/assets/image-button-pressed.png") 100% 100%;
+}
+
+headerbar button.image-button:backdrop headerbar button.title-button:backdrop {
+    background: url("/home/shade/git/Windows-XP-theme/Windows XP Luna/gtk-3.0/assets/image-button-normal-backdrop.png") 100% 100%;
+}
+
+headerbar button.image-button:hover:backdrop headerbar button.title-button:hover:backdrop {
+    background: url("/home/shade/git/Windows-XP-theme/Windows XP Luna/gtk-3.0/assets/image-button-hover.png") 100% 100%;
+}
+
+headerbar button.image-button,
+headerbar button.image-button:hover,
+headerbar button.image-button:active,
+headerbar button.image-button:backdrop,
+headerbar button.image-button:hover:backdrop,
+headerbar button.image-button:active:backdrop,
+headerbar button.title-button,
+headerbar button.title-button:hover,
+headerbar button.title-button:active,
+headerbar button.title-button:backdrop,
+headerbar button.title-button:hover:backdrop,
+headerbar button.title-button:active:backdrop {
+    padding: 2px 2px 2px 2px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: rgba(0, 0, 0, 0);
+    border-style: none;
+    box-shadow: none;
+}
+
+headerbar,
+headerbar image,
+headerbar stackswitcher,
+headerbar stackswitcher button,
+headerbar viewswitcher,
+headerbar viewswitcher button,
+headerbar viewswitcher radio {
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
+
+headerbar .titlebutton:not(separator) {
+    padding: 5px 5px 0px 0px;
+    outline-offset: 0px;
+    outline-width: 0px;
+    margin-left: -4px;
+    margin-top: 3px;
+}
+
+
+window decoration {
+    background-image: radial-gradient(ellipse at 50% 100%, rgba(0, 24, 171, 1) 0%, rgba(0, 88, 238, 1) 75%);
+    transition-duration: 0ms;
+}
+
+window decoration:backdrop {
+    background-image: radial-gradient(ellipse at 50% 100%, rgba(79, 83, 188, 1) 0%, rgba(117, 140, 220, 1) 75%);
+    transition-duration: 0ms;
+}
+
+window decoration,
+window decoration:backdrop {
+    padding: 0px 4px 4px 4px;
+}
+
+window.maximized decoration,
+window:backdrop.maximized decoration {
+    padding: 0px 0px 0px 0px;
+}
