--- a/Windows XP Luna/gtk-3.20/gtk.css
+++ b/Windows XP Luna/gtk-3.20/gtk.css
@@ -283,7 +283,7 @@ button:visited>label {
 }
 
 button {
-    padding: 6px 6px;
+    padding: 4px 4px;
     border-style: solid;
     border-width: 1px;
     border-radius: 2px;
@@ -1019,6 +1019,9 @@ list {
 
 list row {
     padding: 2px;
+    /*border-width: 1px;
+	border-style: solid;
+	border-color: white;*/
 }
 
 list row:hover {
@@ -1064,7 +1067,7 @@ list row:selected:backdrop,
 list row:selected:hover:backdrop,
 list row:selected:focus:backdrop {
     color: #000000;
-    background-color: #1466C9;
+    background-color: #ece9d8;
 }
 
 list separator,
@@ -1403,6 +1406,12 @@ vte-terminal {
 scrolledwindow.frame,
 scrolledwindow viewport.frame {
     border: none;
+}
+
+scrolledwindow>viewport>list {
+	border-style: solid;
+	border-color: #7f9db9;
+	border-width: 1px;
 }
 
 arrow,
@@ -2699,62 +2708,6 @@ toolbar button separator:backdrop,
 .primary-toolbar:not(.libreoffice-toolbar) separator:backdrop {
     background-color: #dad8c8;
 }
-
-headerbar separator {
-    -GtkWidget-window-dragging: true;
-    margin-top: 4px;
-    margin-bottom: 4px;
-    background-color: #d4d2c2;
-}
-
-headerbar separator:backdrop {
-    background-color: #dad8c8;
-}
-
-headerbar button separator {
-    border-color: #d4d2c2;
-}
-
-headerbar button separator:backdrop {
-    border-color: #dad8c8;
-}
-
-/*.titlebar separator,
-.titlebar:not(headerbar)>separator,
-.titlebar separator.titlebutton,
-.titlebar:not(headerbar)>separator.titlebutton {
-    -GtkWidget-window-dragging: true;
-    background-color: #d4d2c2;
-}
-
-.titlebar separator:backdrop,
-.titlebar:not(headerbar)>separator:backdrop,
-.titlebar separator.titlebutton:backdrop,
-.titlebar:not(headerbar)>separator.titlebutton:backdrop {
-    background-color: #dbd7bb;
-}
-
-headerbar separator.titlebutton,
-.titlebar:not(headerbar) separator.titlebutton {
-    min-width: 1px;
-    min-height: 1px;
-    background-color: #d4d2c2;
-}
-
-headerbar separator.titlebutton:backdrop,
-.titlebar:not(headerbar) separator.titlebutton:backdrop {
-    background-color: #dbd7bb;
-}
-
-.titlebutton button separator,
-.titlebutton separator.titlebutton {
-    border-color: #d4d2c2;
-}
-
-.titlebutton button separator:backdrop,
-.titlebutton separator.titlebutton:backdrop {
-    border-color: #dbd7bb;
-}*/
 
 menu separator {
     background-color: #e6e6e6;
@@ -4479,83 +4432,11 @@ button.suggested-action {
     box-shadow: inset 0 0 2px 1px #95b4e8;
 }
 
-headerbar button.suggested-action {
-    box-shadow: inset 0 0 2px 1px #95b4e8;
-}
 
 toolbar.selection-mode {
     padding: 4px;
 }
 
-headerbar.selection-mode,
-toolbar.selection-mode {
-    border-color: #a1c2e9;
-    color: #FFFFFF;
-    background-color: #a1c2e9;
-}
-
-headerbar.selection-mode:backdrop,
-toolbar.selection-mode:backdrop {
-    border-color: #082950;
-    color: #000000;
-    background-color: #082950;
-}
-
-headerbar.selection-mode button,
-toolbar.selection-mode button {
-    border-width: 1px;
-    border-style: solid;
-    border-color: #b9d1ef;
-    border-radius: 2px;
-    color: #1052a1;
-    background-color: #b9d1ef;
-}
-
-headerbar.selection-mode button:hover,
-toolbar.selection-mode button:hover {
-    border-color: #c4d9f2;
-    background-color: #c4d9f2;
-}
-
-headerbar.selection-mode button:active,
-headerbar.selection-mode button:checked,
-toolbar.selection-mode button:active,
-toolbar.selection-mode button:checked {
-    border-color: #7eabe1;
-    background-color: #7eabe1;
-}
-
-headerbar.selection-mode button:active:backdrop,
-headerbar.selection-mode button:checked:backdrop,
-toolbar.selection-mode button:active:backdrop,
-toolbar.selection-mode button:checked:backdrop {
-    border-color: #0b386f;
-    background-color: #0b386f;
-}
-
-headerbar.selection-mode button:backdrop,
-toolbar.selection-mode button:backdrop {
-    border-color: #051a32;
-    color: #0e478d;
-    background-color: #051a32;
-}
-
-headerbar.selection-mode button.suggested-action,
-toolbar.selection-mode button.suggested-action {
-    box-shadow: inset 0 0 2px 1px #95b4e8;
-}
-
-headerbar.selection-mode .selection-menu button,
-toolbar.selection-mode .selection-menu button {
-    border-style: none;
-    background-color: transparent;
-    color: #1e5392;
-}
-
-headerbar.selection-mode .selection-menu button .dim-label,
-toolbar.selection-mode .selection-menu button .dim-label {
-    color: #21497a;
-}
 
 .popup,
 .popup menu {
@@ -5239,7 +5120,7 @@ UnityPanelWidget .menuitem,
 @define-color borders #dbd7bb;
 /* widgets main borders color on backdrop windows */
 @define-color unfocused_borders #dbd7bb;
-/* these are pretty self explicative */
+these are pretty self explicative
 @define-color warning_color #FF9900;
 @define-color error_color #CC0000;
 @define-color success_color #39E4A3;
